extra space in footer fixed

--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -113,6 +113,7 @@ list-item {
   display: inline;
   font-size: 0.65em;
   text-align: center;
+  flex-grow: 2;
 }
 
 /* Used in static_pages.tsx */
@@ -424,7 +425,7 @@ list-item {
 /* Used in individual_form.tsx */
 .control {
   margin: 0.3em;
-  padding-right: 0.5em;
+  padding-right: 1em;
 }
 
 /* Used in individual_form.tsx */
